--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,6 @@ rusty_pool = { optional = true, version = "0.7" }
 serde = { version = "1", features = ["derive"] }
 serde-aux = { optional = true, version = "4"}
 serde_json = "1"
-serenity = { default-features = false, optional = true, version = "0.12.0", features = ["voice", "gateway"] }
 serenity-voice-model = { optional = true, version = "0.2" }
 simd-json = { features = ["serde_impl"], optional = true, version = "0.13" }
 socket2 = { optional = true, version = "0.5" }
@@ -53,6 +52,14 @@ twilight-model = { default-features = false, optional = true, version = "0.15.0"
 typemap_rev = { optional = true, version = "0.3" }
 url = { optional = true, version = "2" }
 uuid = { features = ["v4"], optional = true, version = "1" }
+
+[dependencies.serenity]
+default-features = false
+optional = true
+# version = "0.12.0"
+git = "https://github.com/serenity-rs/serenity.git"
+branch = "current"
+features = ["voice", "gateway"]
 
 [dev-dependencies]
 byteorder = "1"
