--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ default-features = false
 optional = true
 # version = "0.12.0"
 git = "https://github.com/serenity-rs/serenity.git"
-branch = "current"
+# branch = "current"
 rev = "4bf09a883168b8c1998e78774cadd56cbc6407c3"
 features = ["voice", "gateway"]
 
